--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "regex-escape",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Escapes input characters to be used in regular expressions.",
   "main": "lib/index.js",
   "directories": {
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:IonicaBizau/node-regex-escape.git"
+    "url": "git@github.com:IonicaBizau/regex-escape.git"
   },
   "keywords": [
     "regex",
@@ -23,7 +23,12 @@
   "author": "Ionică Bizău <bizauionica@gmail.com> (http://ionicabizau.net)",
   "license": "KINDLY",
   "bugs": {
-    "url": "https://github.com/IonicaBizau/node-regex-escape/issues"
+    "url": "https://github.com/IonicaBizau/regex-escape/issues"
   },
-  "homepage": "https://github.com/IonicaBizau/node-regex-escape"
+  "homepage": "https://github.com/IonicaBizau/regex-escape",
+  "blah": {
+    "thanks": [
+      "Big thanks to [CoolAj86](http://stackoverflow.com/users/151312/coolaj86) for posting [this answer](http://stackoverflow.com/a/6969486/1420197). This library uses the black magic regex from that answer. :sparkles:"
+    ]
+  }
 }
