--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:IonicaBizau/regex-escape.git"
+    "url": "git@github.com:IonicaBizau/regex-escape.js.git"
   },
   "keywords": [
     "regex",
@@ -23,9 +23,9 @@
   "author": "Ionică Bizău <bizauionica@gmail.com> (http://ionicabizau.net)",
   "license": "KINDLY",
   "bugs": {
-    "url": "https://github.com/IonicaBizau/regex-escape/issues"
+    "url": "https://github.com/IonicaBizau/regex-escape.js/issues"
   },
-  "homepage": "https://github.com/IonicaBizau/regex-escape",
+  "homepage": "https://github.com/IonicaBizau/regex-escape.js",
   "blah": {
     "thanks": [
       "Big thanks to [CoolAj86](http://stackoverflow.com/users/151312/coolaj86) for posting [this answer](http://stackoverflow.com/a/6969486/1420197). This library uses the black magic regex from that answer. :sparkles:"
