:arrow_up: 3.2.0 and open-source license :heart:

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "regex-escape",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "Escapes input characters to be used in regular expressions.",
   "main": "lib/index.js",
   "directories": {
@@ -21,7 +21,7 @@
     "escape"
   ],
   "author": "Ionică Bizău <bizauionica@gmail.com> (http://ionicabizau.net)",
-  "license": "KINDLY",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/IonicaBizau/regex-escape.js/issues"
   },
